--- a/member.html
+++ b/member.html
@@ -42,6 +42,7 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
+	<p>初心者のはずだが隠された記憶がある</p>
       </div>
     </div>
 
